# go-libtorch-tutorial

./: .gitignore  README.md  linux-setup.sh
c++/: CMakeLists.txt  makefile  test_torch.cpp
cnn/: CMakeLists.txt  fetch_data.sh  makefile  test_cnn.cpp
cnn/data/: checksum  mnist_read.go  read.go
go/: CMakeLists.txt  main.go  makefile  test_sum.cpp  test_sum.h  test_torch.cpp
go-cnn/: CMakeLists.txt  main.go  makefile  test_cnn.cpp  test_cnn.h
py/: mps.py  test_device.py  test_device.sh  test_mps.sh
